--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docker:logs": "docker logs checkegeedubot"
   },
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "js-yaml": "^3.13.1",
     "lowdb": "^1.0.0",
     "node-emoji": "^1.10.0",
