Renamed bot script to start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "bot": "node src/index.js",
+    "start": "node src/index.js",
     "docker:build": "docker build -t checkegeedubot .",
     "docker:run": "docker run -d -v $(pwd)/storage:/opt/bot/storage -u $(id -u) -e TG_TOKEN --restart unless-stopped --name checkegeedubot checkegeedubot",
     "docker:stop": "docker stop checkegeedubot && docker rm checkegeedubot",
