--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sqlite3": "^4.0.8",
     "telegraf": "^3.30.1",
     "telegraf-session-local": "^0.0.7",
+    "telegraf-session-redis": "^5.1.0",
     "telegraf-session-sqlite": "^1.0.6",
     "uuid": "^3.3.2"
   }
