--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
   "name": "checkegeedubot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
-  "scripts": {
-    "start": "node src/index.js",
-    "docker:build": "docker build -t checkegeedubot .",
-    "docker:run": "docker run -d -v $(pwd)/storage:/opt/bot/storage -u $(id -u) -e TG_TOKEN --restart unless-stopped --name checkegeedubot checkegeedubot",
-    "docker:stop": "docker stop checkegeedubot && docker rm checkegeedubot",
-    "docker:logs": "docker logs checkegeedubot"
-  },
   "dependencies": {
+    "@keyv/postgres": "^1.0.16",
     "abort-controller": "^3.0.0",
-    "js-yaml": "^3.13.1",
-    "lowdb": "^1.0.0",
+    "js-yaml": "^3.14.0",
+    "keyv": "^4.0.1",
     "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.0",
-    "sqlite3": "^4.0.8",
-    "telegraf": "^3.30.1",
-    "telegraf-session-local": "^0.0.7",
-    "telegraf-session-redis": "^5.1.0",
-    "telegraf-session-sqlite": "^1.0.6",
-    "uuid": "^3.3.2"
+    "telegraf": "^3.38.0",
+    "uuid": "^8.2.0"
   }
 }
